--- a/1day/scss/main.scss
+++ b/1day/scss/main.scss
@@ -1,25 +1,23 @@
-$main-color:#f00;
-$radius:5px;
-$color: #E13E06;
+$main-color: #f00;
+$radius: 5px;
+$color: #e13e06;
 @mixin center() {
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 @function makelongshadow($color) {
     $val: 0px 0px $color;
     @for $i from 1 through 1000 {
-      $val: #{$val}, #{$i}px #{$i}px #{$color};
+        $val: #{$val}, #{$i}px #{$i}px #{$color};
     }
     @return $val;
-  }
-  
-  @mixin longshadow($color) {
+}
+
+@mixin longshadow($color) {
     text-shadow: makelongshadow($color);
-  }
-
-
+}
 
 #lotto {
     text-align: center;
@@ -27,16 +25,15 @@ $color: #E13E06;
         font-size: 2rem;
         @include longshadow(#f00);
         &:hover {
-            color:$main-color;
+            color: $main-color;
         }
         &:before {
-
         }
     }
     #gameNum {
         height: 40px;
         font-size: 12px;
-        color:#f00;
+        color: #f00;
         line-height: 40px;
         border: 1px solid #000;
         border-radius: $radius;
@@ -44,25 +41,28 @@ $color: #E13E06;
         box-sizing: border-box;
     }
     .btnLotto {
-        width:80px;
+        width: 80px;
         height: 40px;
-        color:#fff;
+        color: #fff;
         background-color: #000;
         outline: none;
-        border:none;
+        border: none;
         vertical-align: middle;
         border-radius: $radius;
     }
+    #price {
+        padding: 40px;
+    }
     #lottoBox {
-        padding:50px 0;
+        padding: 50px 0;
         text-align: center;
         div {
             span {
                 display: inline-block;
-                width:40px;
+                width: 40px;
                 height: 40px;
                 margin: 0 5px;
-                color:#fff;
+                color: #fff;
                 line-height: 40px;
                 background-color: #000;
                 border-radius: 100px;
@@ -81,13 +81,12 @@ $color: #E13E06;
                 &.green {
                     background-color: rgb(51, 255, 0);
                 }
-                
             }
         }
     }
 }
 .box {
-    width:50px;
+    width: 50px;
     height: 50px;
     background-color: #000;
     @include center();
