경로 css/ 로 어떻게 바꾸지?

--- a/1day/scss/main.scss
+++ b/1day/scss/main.scss
@@ -1,3 +1,4 @@
+//쉬프트 알트 f 가 포멧하는 법임
 $main-color: #f00;
 $radius: 5px;
 $color: #e13e06;
@@ -52,6 +53,7 @@ $color: #e13e06;
     }
     #price {
         padding: 40px;
+        font-size: 15px;
     }
     #lottoBox {
         padding: 50px 0;
