--- a/2day/hitop/css/layout.css
+++ b/2day/hitop/css/layout.css
@@ -1,14 +1,16 @@
-
 body {
     font-size: 16px;
-    color:#333333;
-    font-family:"Lato","Noto Sans KR","Apple SD Gothic Neo","AppleSDGothicNeo-Regular","맑은 고딕","Malgun Gothic",Arial,  sans-serif;
+    color: #333333;
+    font-family: "Lato", "Noto Sans KR", "Apple SD Gothic Neo", "AppleSDGothicNeo-Regular", "맑은 고딕", "Malgun Gothic",
+        Arial, sans-serif;
 }
 a {
-    color:inherit;
+    color: inherit;
     text-decoration: none;
 }
-img {vertical-align: top;}
+img {
+    vertical-align: top;
+}
 /* #logo,#utilMenu {position:absolute;}
 #logo {left:0;top:0;}
 #utilMenu {right:0;top:0;}
@@ -20,10 +22,8 @@ img {vertical-align: top;}
 /* inline은 넓이 높이를 가질 수 없는 형태 */
 /* inline-block은 넓이 높이를 가지는 inline형태 즉 block과 inline의 장점을 둘 다 가질 수 있다. */
 
-
 /* 모든 태그는 box model을 가진다.
 그리고 모든 태그는 display형태(block/inline)를 가지고 태어난다. */
-
 
 /* 1. block 요소들을 옆으로 나열해 보자...
 header,footer,div,li,ul 등등
@@ -35,134 +35,234 @@ a,span,strong,img,iframe,input 등을 제외한 나머지것들.. */
     font-size:16px;
 } */
 
-#header {position: fixed;color:#fff;width:100%;height:90px;z-index:999;
-transition: all 0.5s;
-overflow: hidden;
+#header {
+    position: fixed;
+    color: #fff;
+    width: 100%;
+    height: 90px;
+    z-index: 999;
+    transition: all 0.5s;
 }
-#header.on {
-    height: 400px;
+#header:after {
+    display: block;
+    position: absolute;
+    top: 89px;
+    content: "";
+    width: 100%;
+    height: 1px;
     background-color: #fff;
-    color:#333;
 }
-#header:after {display:block; position: absolute;top:89px;content:"";width:100%;height:1px; background-color: #fff;}
-#header.on:after {display: none;}
-#gnb {position: relative;text-align: center;z-index: 2;}
-#gnb .list {display:inline-block;margin:0 auto;}
-#gnb .list > li {float:left;}
-#gnb .list > li .depth01 {
-    display:block;
+#gnb {
     position: relative;
-    padding:0 60px;font-size:20px;
-    line-height:90px;font-weight: 900;
-    height:90px;
-    
-/* padding-left:60px;padding-right:60px;padding-top:30px;padding-bottom: 30px; */
+    text-align: center;
+    z-index: 2;
 }
-#gnb .list > li .depth01:after {display:block;position: absolute;right:20px;bottom:-2px;left:20px;content:"";background-color: #fff;z-index: 2;height:3px;
-    transform: scaleX(0);
-    transition:all 0.2s;
+#gnb .list {
+    display: inline-block;
+    margin: 0 auto;
 }
-#header.scroll {
-    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+#gnb .list > li {
+    float: left;
+}
+#gnb .list > li .depth01 {
+    display: block;
+    position: relative;
+    padding: 0 60px;
+    font-size: 20px;
+    line-height: 90px;
+    font-weight: 900;
+    height: 90px;
+
+    /* padding-left:60px;padding-right:60px;padding-top:30px;padding-bottom: 30px; */
+}
+#gnb .list > li .depth01:after {
+    display: block;
+    position: absolute;
+    right: 20px;
+    bottom: -2px;
+    left: 20px;
+    content: "";
     background-color: #fff;
+    z-index: 2;
+    height: 3px;
+    transform: scaleX(0);
+    transition: all 0.2s;
 }
-#header.scroll {
-    color:#333;
+#gnb .list > li:hover .depth01 {
+    background-color: #bf0c14;
 }
-#header.scroll .btnAll {
-    color:#333;
-}
-
-
-#gnb .list > li:hover .depth01 {background-color: #bf0c14;}
 #gnb .list > li:hover .depth01:after {
     transform: scaleX(1);
 }
-#gnb .list .depth02 {padding:15px 0 25px;height:400px;}
-
-#header.on #gnb .list > li:hover {color:#fff;}
-#header.on #gnb .list > li:hover .depth02 {background-color: #bf0c14;}
-#header.on .btnOnline {}
-#header.on #utilMenu .btnAll span {
-    background-color: #333;
+#gnb .list > li.depth02 {
+    background-color: red;
+    border-radius: 0 0 15px 15px;
+    padding: 15px 0 25px;
+    display: none;
+    /*opacity: 0; //서서히 나타나게 display none을 지움
+    visibility: hidden;
+    transition: all 0.5s ease;*/
 }
-#header.scroll #utilMenu .btnAll span {
-    background-color: #333;
+#gnb .list > li:hover .depth02 {
+    opacity: 1;
+    visibility: visible;
+    /*display: block;*/
+}
+#gnb .list .depth02 {
+    padding: 15px 0 25px;
+    display: none;
+}
+#gnb .list > li:hover .depth02 {
+    display: block;
 }
 
-#header.on #utilMenu .btnOnline {
-    border-color: #333;
+#gnb .list .depth02 li a {
+    display: block;
+    padding: 10px 0;
 }
-#header.scroll #utilMenu .btnOnline {
-    border-color: #333;
+#logo {
+    position: absolute;
+    top: 24px;
+    left: 30px;
+    z-index: 3;
 }
-
-
-
-#gnb .list .depth02 li a {display: block; padding:10px 0;}
-#logo {position:absolute;top:24px;left:30px;z-index: 3;}
-#utilMenu {position:absolute;top:0;right:30px;z-index: 3;}
+#utilMenu {
+    position: absolute;
+    top: 0;
+    right: 30px;
+    z-index: 3;
+}
 #utilMenu .btnOnline {
-    display:block;
-    position: absolute;top:20px;right:50px;    padding:15px 30px;    border:2px solid #fff;
-    border-radius:100px;
-    width:110px;
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    padding: 15px 30px;
+    border: 2px solid #fff;
+    border-radius: 100px;
+    width: 110px;
 }
 #utilMenu .btnAll {
-    display:block;
+    display: block;
     position: absolute;
     top: 34px;
-    right:0;
-    height:22px;
-    width:30px;
+    right: 0;
+    height: 22px;
+    width: 30px;
 }
 #utilMenu .btnAll span {
-    display:block;
+    display: block;
     position: absolute;
-    width:30px;height:2px;background-color: #fff;
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
 }
-#utilMenu .btnAll span:nth-child(1) {top:0;}
-#utilMenu .btnAll span:nth-child(2) {top:10px;}
-#utilMenu .btnAll span:nth-child(3) {top:20px;}
+#utilMenu .btnAll span:nth-child(1) {
+    top: 0;
+}
+#utilMenu .btnAll span:nth-child(2) {
+    top: 10px;
+}
+#utilMenu .btnAll span:nth-child(3) {
+    top: 20px;
+}
 
-.container:after,  .clearFix:after , ul:after {display:block;content:"";clear:both;}
+.container:after,
+.clearFix:after,
+ul:after {
+    display: block;
+    content: "";
+    clear: both;
+}
 
-#footer {color: #fff;background-color: #444;}
-#footer .utilMenu {padding:20px 0;text-align: center;
-    border-bottom: 1px solid rgba(255,255,255,0.2);}
-#footer .utilMenu ul {display: inline-block;}
-#footer .utilMenu ul li {padding:0 20px;float: left;border-left:1px solid rgba(255,255,255,0.2);}
-#footer .utilMenu ul li:nth-child(1) {border-left: none;}
+#footer {
+    color: #fff;
+    background-color: #444;
+}
+#footer .utilMenu {
+    padding: 20px 0;
+    text-align: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+#footer .utilMenu ul {
+    display: inline-block;
+}
+#footer .utilMenu ul li {
+    padding: 0 20px;
+    float: left;
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+}
+#footer .utilMenu ul li:nth-child(1) {
+    border-left: none;
+}
 
-#footer #address {padding:50px 0;}
-#footer #address .fLogo {float: left;}
-#footer #address address {margin-left: 50px;font-size: 14px;line-height: 1.5;float: left;}
-#footer #address address dl {margin-bottom: 20px;}
-#footer #address address dt {display:inline;}
-#footer #address address dt:after {display: inline-block;margin:0 10px;content:":";}
-#footer #address address dd {display:inline;}
-#footer #address address dd:after {display:inline-block;margin: 0 15px;content:"/";}
-#footer #address address .newline:before {display: inline;content:"\A"; white-space: pre;}
-#footer #address .tel {float: right;}
-#footer #address .tel dd {margin-top: 10px;font-size: 38px; font-weight: 700;}
+#footer #address {
+    padding: 50px 0;
+}
+#footer #address .fLogo {
+    float: left;
+}
+#footer #address address {
+    margin-left: 50px;
+    font-size: 14px;
+    line-height: 1.5;
+    float: left;
+}
+#footer #address address dl {
+    margin-bottom: 20px;
+}
+#footer #address address dt {
+    display: inline;
+}
+#footer #address address dt:after {
+    display: inline-block;
+    margin: 0 10px;
+    content: ":";
+}
+#footer #address address dd {
+    display: inline;
+}
+#footer #address address dd:after {
+    display: inline-block;
+    margin: 0 15px;
+    content: "/";
+}
+#footer #address address .newline:before {
+    display: inline;
+    content: "\A";
+    white-space: pre;
+}
+#footer #address .tel {
+    float: right;
+}
+#footer #address .tel dd {
+    margin-top: 10px;
+    font-size: 38px;
+    font-weight: 700;
+}
 
-
-.btnTop {position: fixed;right:30px;bottom:-100px;z-index: 99; transition: 0.25s ease-out;}
-.btnTop.scroll {bottom:30px;}
-
-
+.btnTop {
+    position: fixed;
+    right: 30px;
+    bottom: -100px;
+    z-index: 99;
+    transition: 0.25s ease-out;
+}
+.btnTop.scroll {
+    bottom: 30px;
+}
 
 /* popup */
 #popup {
     display: none;
     position: fixed;
-    top:50px;
-    left:50px;
-    padding:10px;
+    top: 50px;
+    left: 50px;
+    padding: 10px;
     z-index: 99999;
     border: 1px solid #d9d9d9;
     background-color: #fff;
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.1);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 #popup .contents {
     min-width: 400px;
@@ -176,18 +276,17 @@ overflow: hidden;
 #popup .btns button {
     display: inline-block;
     background-color: #000;
-    color:#fff;
-    padding:5px 10px;
+    color: #fff;
+    padding: 5px 10px;
 }
 
 .cover {
     display: none;
     position: fixed;
-    left:0px;
-    top:0px;
-    right:0px;
-    bottom:0px;
-    background-color: rgba(0,0,0,0.9);
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.9);
     z-index: 999999;
 }
-
