--- a/3day/dkg-holdings_scroll/css/layout.css
+++ b/3day/dkg-holdings_scroll/css/layout.css
@@ -1,72 +1,93 @@
 body {
     font-size: 16px;
-    color:#333;
-    font-family: "Noto Sans KR","맑은 고딕","돋움",sans-serif;
+    color: #333;
+    font-family: "Noto Sans KR", "맑은 고딕", "돋움", sans-serif;
 }
+
 a {
-    color:inherit;
+    color: inherit;
     text-decoration: none;
 }
+
 img {
     vertical-align: top;
 }
+
 #header {
     position: fixed;
-    color:#fff;
+    color: #fff;
     width: 100%;
     height: 90px;
     z-index: 99;
     overflow: hidden;
     transition: all 0.25s ease-out;
 }
+
 #header:before {
     display: block;
     position: absolute;
-    top:90px;
+    top: 90px;
     content: '';
-    width:100%;
+    width: 100%;
     height: 1px;
-    background-color: #d9d9d9;
+    background-color: #c9c9c9;
 }
+
 #header.on {
-    color:#333;
+    color: #333;
     height: 350px;
     background-color: #fff;
-    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 }
+
 #logo {
-    position: absolute;    top:14px;    left:50px;
+    position: absolute;
+    top: 14px;
+    left: 50px;
 }
+
 #logo img {
     position: absolute;
     transition: all 0.25s;
 }
+
 #logo .color {
     opacity: 0;
 }
+
 #header.on #logo .color {
     opacity: 1;
 }
+
 #header.on #logo .white {
     opacity: 0;
 }
+
 .gnbList {
     font-size: 0;
     text-align: center;
 }
-.gnbList > li {
+
+.gnbList>li {
     display: inline-block;
     vertical-align: top;
 }
-.gnbList > li .depth01 {
-    display: block;    padding:0 50px;
-    font-size: 18px;    line-height: 90px;    height: 90px;    font-weight: 700;
+
+.gnbList>li .depth01 {
+    display: block;
+    padding: 0 50px;
+    font-size: 18px;
+    line-height: 90px;
+    height: 90px;
+    font-weight: 700;
 }
-.gnbList > li .depth02 {
-    padding:20px 0;
+
+.gnbList>li .depth02 {
+    padding: 20px 0;
     font-size: 16px;
 }
-.gnbList > li .depth02 a {
+
+.gnbList>li .depth02 a {
     display: block;
     padding: 10px 0;
 }
@@ -74,9 +95,9 @@ img {
 .skip {
     display: block;
     position: fixed;
-    top:100px;
-    left:100px;
-    padding:10px 15px;
+    top: 100px;
+    left: 100px;
+    padding: 10px 15px;
     color: #000;
     background-color: #fff;
     border-radius: 5px;
@@ -87,15 +108,16 @@ img {
 .btnTop.on {
     bottom: 50px;
 }
+
 .btnTop {
-    transition:all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
     display: block;
     position: fixed;
-    right:50px;
+    right: 50px;
     bottom: -100px;
-    color:#fff;
+    color: #fff;
     line-height: 50px;
-    width:50px;
+    width: 50px;
     height: 50px;
     background-color: #000;
     text-align: center;
