--- a/3day/hublot/css/main.css
+++ b/3day/hublot/css/main.css
@@ -26,8 +26,9 @@ h2 {
     height: 100%;
     left: 0;
     top: 0;
-    /*z-index: 3;*/
-    /*시계 위로 올라감*/
+    /*z-index: 3; */
+    /*위치 지정 요소와, 그 자손 또는 하위 플렉스 아이템의 Z축 순서를 지정합니다*/
+    /*particlesJS가 시계 위로 올라감*/
 }
 
 #main {
@@ -57,7 +58,7 @@ h2 {
 }
 
 .btns a:hover {
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgb(255, 255, 255);
 }
 
 .section {
