--- a/1day/scss/main.css
+++ b/1day/scss/main.css
@@ -19,7 +19,8 @@
   border: 1px solid #000;
   border-radius: 5px;
   vertical-align: middle;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 #lotto .btnLotto {
@@ -81,6 +82,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 /*# sourceMappingURL=main.css.map */
